--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: abarot <abarot@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/15 12:18:43 by abarot            #+#    #+#              #
-#    Updated: 2020/01/08 13:05:00 by abarot           ###   ########.fr        #
+#    Updated: 2020/01/20 10:45:36 by abarot           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,8 +22,7 @@ SRCS	=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c \
 			ft_itoa.c ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c  \
 			ft_putendl_fd.c ft_putnbr_fd.c ft_toupper_string.c \
 			ft_reverse_string.c ft_hextoa.c ft_addtoa.c ft_char_to_str.c \
-			ft_utoa.c ft_ftoa.c ft_rounded_ascii.c ft_ltoa.c \
-			ft_scinottoa.c
+			ft_utoa.c ft_ftoa.c ft_rounded_ascii.c ft_ltoa.c 
 
 OBJS	=	$(SRCS:.c=.o)
 
