--- a/libft/Makefile
+++ b/libft/Makefile
@@ -23,9 +23,9 @@ SRCS	=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c \
 			ft_putendl_fd.c ft_putnbr_fd.c ft_toupper_string.c \
 			ft_reverse_string.c ft_hextoa.c ft_addtoa.c ft_char_to_str.c \
 			ft_is_printf_option.c ft_is_printf_type.c \
-			ft_utoa.c ft_ftoa.c ft_rounded_ascii.c ft_litoa.c \
-			ft_scinottoa.c ft_llitoa.c ft_lutoa.c ft_llutoa.c \
-			ft_lhextoa.c ft_llhextoa.c
+			ft_utoa.c ft_ftoa.c ft_scinottoa.c \
+			ft_litoa.c ft_lhextoa.c ft_lutoa.c \
+			ft_llitoa.c ft_llhextoa.c ft_llutoa.c 
 
 OBJS	=	$(SRCS:.c=.o)
 
